--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/x500.sdf.jinja
@@ -832,6 +832,7 @@
     {{ components.rplidar_macro(
       namespace = namespace,
       parent_link = root,
+      horizontal_samples = horizontal_samples,
       x = 0.0,
       y = 0.0,
       z = 0.136,
@@ -854,6 +855,7 @@
       rot_freq = 10,
       noise = 0.03,
       enable_gpu_ray = use_gpu_ray,
+      horizontal_samples = horizontal_samples,
       x = 0.0,
       y = 0.0,
       z = 0.107,
