--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/naki.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/naki.sdf.jinja
@@ -783,6 +783,7 @@
       namespace = namespace,
       parent_link = root,
       horizontal_samples = horizontal_samples,
+      rotation_freq = rotation_freq,
       x = 0.0,
       y = 0.0,
       z = 0.09,
@@ -802,7 +803,7 @@
       parent_link = root,
       sensor_name = "os",
       ouster_model = ouster_model,
-      rot_freq = 10,
+      rotation_freq = rotation_freq,
       noise = 0.03,
       enable_gpu_ray = use_gpu_ray,
       horizontal_samples = horizontal_samples,
