--- a/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/t650.sdf.jinja
+++ b/ros_packages/mrs_uav_gazebo_simulation/models/mrs_robots_description/sdf/t650.sdf.jinja
@@ -761,6 +761,7 @@
       namespace = namespace,
       parent_link = root,
       horizontal_samples = horizontal_samples,
+      rotation_freq = rotation_freq,
       x = 0.0,
       y = 0.0,
       z = 0.107,
@@ -780,7 +781,7 @@
       namespace = namespace,
       parent_link = root,
       sensor_name = "velodyne",
-      rot_freq = 20,
+      rotation_freq = rotation_freq,
       lasers = 16,
       vfov_angle = 30,
       max_range = 100,
@@ -806,7 +807,7 @@
       parent_link = root,
       sensor_name = "os",
       ouster_model = ouster_model,
-      rot_freq = 10,
+      rotation_freq = rotation_freq,
       noise = 0.03,
       enable_gpu_ray = use_gpu_ray,
       horizontal_samples = horizontal_samples,
